--- a/style.css
+++ b/style.css
@@ -49,8 +49,8 @@ html {
 body {
   margin: 3rem 0 0 0;
   font-family: var(--body-font);
-  background-color: var(--white-color);
-  color: var(--first-color);
+  background-color: var(--first-color);
+  color: var(--white-color);
 }
 
 h1,
@@ -78,8 +78,7 @@ img {
 /*---- Layout ----*/
 .bd-grid {
   max-width: 1200px;
-  margin-left: 1rem;
-  margin-right: 1rem;
+  margin: 0.3rem;
 }
 
 .I-header {
@@ -105,6 +104,21 @@ img {
   align-items: center;
 }
 
+.home_img {
+  grid-auto-rows: 2;
+  grid-auto-columns: 1;
+  grid-area: img;
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+}
+
+.home_img img {
+  width: 81px;
+  height: 177px;
+  margin: 1rem;
+}
+
 @media screen and (max-width: 768px) {
   .nav_menu {
     position: fixed;
@@ -118,6 +132,17 @@ img {
     border-bottom: 1px solid gray;
     -webkit-transition: 0.5s;
     transition: 0.5s;
+  }
+
+  .home {
+    height: calc(100vh - 3rem);
+    display: -ms-grid;
+    display: grid;
+    justify-content: space-between;
+    grid-auto-rows: 1.5fr 1fr 1fr;
+    grid-template-rows: 1.5fr 1fr 1fr;
+    grid-template-areas: "data" "img" "scroll";
+    row-gap: 1.5rem;
   }
 }
 
@@ -170,15 +195,6 @@ img {
 }
 
 /*Home*/
-.home {
-  height: calc(100vh - 3rem);
-  display: -ms-grid;
-  display: grid;
-  grid-auto-rows: 1.5fr 1fr 1fr;
-  grid-template-rows: 1.5fr 1fr 1fr;
-  grid-template-areas: "data" "img" "scroll";
-  row-gap: 1.5rem;
-}
 
 .home_data {
   grid-auto-rows: 1;
@@ -191,7 +207,7 @@ img {
 .home_title {
   font-size: var(--biggest-font-size);
   font-weight: 400;
-  margin-bottom: 1.5rem;
+  margin: 1.5rem;
 }
 
 .home_description {
@@ -218,8 +234,8 @@ img {
 }
 
 .home_scroll {
-  grid-auto-rows: 3;
-  grid-auto-columns: 1;
+  -ms-grid-rows: 3;
+  -ms-grid-columns: 1;
   grid-area: scroll;
   text-align: center;
   -ms-grid-row-align: center;
@@ -404,11 +420,18 @@ img {
     -ms-grid-rows: 1;
     -ms-grid-columns: 1;
     grid-area: data;
-    padding: 0;
-    -ms-flex-item-align: center;
-    -ms-grid-row-align: center;
     align-self: center;
     text-align: initial;
+  }
+
+  .home_title {
+    margin: 0%;
+    margin-top: 7.8rem;
+  }
+
+  .home_description {
+    margin: 0;
+    padding: 0;
   }
 
   .home_img {
@@ -418,6 +441,7 @@ img {
     -ms-flex-item-align: center;
     -ms-grid-row-align: center;
     align-self: center;
+    margin: 0;
   }
 
   .home_img img {
@@ -430,7 +454,8 @@ img {
     -ms-grid-columns: 1;
     -ms-grid-column-span: 2;
     grid-area: scroll;
-    padding-bottom: 2rem;
+    padding-bottom: 0;
+    margin-top: 5rem;
   }
 
   /*Details*/
